--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -1,6 +1,16 @@
 {
   "dependencies": {
+    "bootstrap": "^5.3.0",
     "react-bootstrap": "^2.8.0",
     "react-router-dom": "^6.14.1"
-  }
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "start-server": "node server.js", 
+    "dev": "concurrently \"npm run start-server\" \"npm run start\""
+}
+
 }
