Adding About page logic and css file

--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -8,9 +8,13 @@
     "concurrently": "^8.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "start-server": "node server.js", 
-    "dev": "concurrently \"npm run start-server\" \"npm run start\""
-}
-
+    "dev": "concurrently \"cd backend && npm start\" \"cd frontend && npm start\""
+  },
+  "name": "my-portfolio",
+  "version": "1.0.0",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
